# serverphotos

./: .env.example  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  package-lock.json  package.json
src/: app.module.ts  main.cpp  main.ts
src/modules/users/application/create-user/: create-user.dto.ts  create-user.service.ts
src/modules/users/domain/: user.repository.ts  user.ts
src/modules/users/infrastructure/persistence/: user.mapper.ts  user.repository.impl.ts
src/modules/users/infrastructure/persistence/entities/: user.entity.ts
static/: index.html  script.js  style.css
